# social-network-mipt

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  main.cpp
config/: config.cpp  config.h
database/: database.cpp  message.cpp  message.h  user.cpp  user.h
docs/: components.md  context.md  task.md
templates/: chat.html  feed.html  index.html
web_server/: http_request_factory.h  http_web_server.h
web_server/handlers/: message_handler.h  user_handler.h
